# SBI_Hackathon

./: .dockerignore  .env.example  .env.test  .gitignore  BankSaathi_UseCaseDiagram.html  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  main.py
app/agents/: __init__.py  graph.py  state.py  worker.py
app/api/: __init__.py  dependencies.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: __init__.py  chromadb_client.py  migration_runner.py  postgres.py  redis_client.py
app/models/: __init__.py  audit.py  customer.py  dms.py  grievance.py  scheme.py  session.py
app/prompts/: khojo_system.txt  samjho_system.txt  suraksha_system.txt
app/schemas/: __init__.py  agent_state.py  eligibility.py  response.py  webhook.py
app/services/: __init__.py  audit.py  gemini.py  notification.py  queue_manager.py  sarvam_stt.py  sarvam_tts.py  whatsapp.py  yono_mock.py
docker/: Dockerfile.worker  nginx.conf
docs/: api_reference.md  architecture.md  banksaathi_final_v7.md  banksaathi_flow_v5.md  compliance.md
scripts/: run_dev.sh  run_tests.sh  seed_schemes.py  yono_mock_server.py
tests/: __init__.py
tests/fixtures/: customer_profiles.json  scheme_rules.json
tests/integration/: __init__.py  test_raju_flow.py  test_webhook_pipeline.py
tests/unit/: __init__.py  test_chalao.py  test_grievance.py  test_jodo.py  test_khojo.py  test_queue_hatao.py  test_samjho.py  test_suraksha.py
(+35 files in other folders)
